--- a/src/styles/style_main.scss
+++ b/src/styles/style_main.scss
@@ -1,7 +1,21 @@
 body {
     background: #1a1e23;
     margin: 0;
-  }
+    color: var(--text-color);
+}
+
+:root{
+  --primary-color: #242424;
+  --secondary-color: #383838;
+  --secondary-color-min: #38383895;
+  --secondary-hover-color: #444;
+
+  --text-color: #E3E3E3;
+  --oppa-text-color: #d0d0d0;
+
+  --accent-color-blue: lightblue;
+  --accent-color-blue-hover: rgb(146, 180, 192);
+}
   
   $bubble-count: 50;
   $sway-type: "sway-left-to-right", "sway-right-to-left";
@@ -22,12 +36,6 @@ body {
     height: 100vh;
     overflow: hidden;
     z-index: -3;
-  }
-  .content-1{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
   }
   
   .bubble {
@@ -64,6 +72,8 @@ body {
       }
     }
   }
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
   
   @keyframes float-up {
     to {
@@ -90,3 +100,104 @@ body {
       transform: translateX(-100%);
     }
   }
+
+
+  .content-1{
+    position: absolute;
+    left: 50%;
+    top: 10%;
+    transform: translate(-50%, -50%);
+  }
+        // Main
+        .content-1 .enter-number{
+          position: absolute;
+          top: 300px;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          white-space: nowrap;
+        }
+        // ueberschrift
+        .content-1 h1{
+          font-size: 3.5rem;
+          background: linear-gradient(to right, #4285f4, #d96570);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
+          font-family: "Poppins", sans-serif;
+          font-weight: 800;
+        }
+
+        // input Feld
+        .content-1 .game-id {   
+          background-color: var(--secondary-color-min);
+          outline: none;
+          padding: 15px 20px;
+          border-radius: 50px 0px 0px 50px;
+          border: none;
+          width: 250px;
+          color: var(--text-color);
+          font-size: 15px;
+        }
+              .content-1 ::placeholder{
+                color: var(--oppa-text-color);
+              }
+
+              .content-1 .game-id:hover{
+                background-color: var(--secondary-hover-color);
+                transition: 200ms ease-in-out;
+              }
+
+              .content-1 .game-id:active{
+                transform: scale(0.96);
+                transition: 250ms;
+              }
+
+        .content-1 .start{
+          padding: 15px 30px;
+          border-radius: 0px 50px 50px 0px;
+          background-color: var(--accent-color-blue);
+          border: none;
+          font-size: 15px;
+          font-weight: 600;
+          cursor: pointer;
+          transform: scale(1);
+        }
+              .content-1 .start:hover{
+                background-color: var(--accent-color-blue-hover);
+              }
+
+              .content-1 .start:active{
+                transform: scale(0.93);
+                transition: 250ms;
+              }
+
+      .content-1 .faq-content-1{
+        text-align: center;
+        margin-top: 10px;
+        font-size: 14px;
+        // text-decoration: underline;
+        cursor: pointer;
+      }
+            .fa-circle-info{
+              margin-right: 7px;
+            }
+                  .fa-circle-info:hover{
+                    transform: scale(0.95);
+                    transition: 200ms;
+                    cursor: pointer;
+                  }
+
+      .content-1 .new-quiz{
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%);
+        top: 300px;
+        background-color: var(--accent-color-blue);
+        color: black;
+        padding: 20px 20px;
+        border-radius: 40px;
+        font-weight: 600;
+        cursor: pointer;
+      }
+
+      
