--- a/src/styles/style_main.scss
+++ b/src/styles/style_main.scss
@@ -187,6 +187,7 @@ body {
                     cursor: pointer;
                   }
 
+      // nicht fertig
       .content-1 .new-quiz{
         position: absolute;
         left: 50%;
