--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,3 +1,18 @@
-* {
+body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: #1a1e23;
+    margin: 0;
+    color: var(--text-color);
 }
+:root{
+    --primary-color: #242424;
+    --secondary-color: #383838;
+    --secondary-color-min: #38383895;
+    --secondary-hover-color: #444;
+  
+    --text-color: #E3E3E3;
+    --oppa-text-color: #d0d0d0;
+  
+    --accent-color-blue: lightblue;
+    --accent-color-blue-hover: rgb(146, 180, 192);
+  }
