--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -6,6 +6,7 @@ body {
 }
 :root{
     --primary-color: #242424;
+    --primary-color-opp: #242424f3;
     --secondary-color: #383838;
     --secondary-color-min: #38383895;
     --secondary-hover-color: #444;
