--- a/src/styles/style_start.scss
+++ b/src/styles/style_start.scss
@@ -83,6 +83,16 @@
   }
 
 
+  .logo{
+    position: absolute;
+    z-index: 100;
+    top: 30px;
+    left: 30px;
+    height: 100px;
+    cursor: pointer;
+  }
+
+
   .content-1{
     position: absolute;
     left: 50%;
@@ -191,6 +201,7 @@
         font-weight: 600;
         cursor: pointer;
         border: none;
+        text-decoration: none;
       }
             .content-1 .new-quiz:hover{
               background-color: var(--accent-color-blue-hover);
@@ -206,11 +217,15 @@
         position: absolute;
         background-color: var(--primary-color-opp);
         left: 50%;
-        top: 400px;
+        top: 40%;
         transform: translate(-50%, -50%);
-        height: 600px;
-        width: 650px;
+        height: 15em;
+        width: 30em;
         border-radius: 50px;
+        z-index: 100;
+        display: block;
+        white-space: nowrap;
+        border: 2px solid var(--primary-color);
       }
       
             .search{
@@ -221,6 +236,13 @@
             }
                   .search-text{
                     font-size: 20px;
+                  }
+
+                  .search-text-2{
+                    position: absolute;
+                    top: 50%;
+                    transform: translate(-50%);
+                    font-size: 19px;
                   }
 
                   .loader{
@@ -240,6 +262,9 @@
                     text-align: center;
                     font-size: 20px;
                     color: rgb(220, 39, 39);
+                    top: 50%;
+                    position: absolute;
+                    transform: translate(-50%);
                   }
 
                   .try-again{
@@ -257,8 +282,6 @@
                         .try-again:hover{
                           background-color: var(--accent-color-blue-hover);
                           transition: 200ms ease;
-                          transform: scale(0.95);
-                          left: 17%;
                         }
 
                   @keyframes spin {
