--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -48,7 +48,7 @@
     margin-left: 150px;
 }
 
-.login .login-content{
+.login {
     background-color: rgba(255, 255, 255, 0.842) ;
     box-shadow: 0 14px 28px rgba(157, 39, 39, 0.25), 
 			0 10px 10px rgba(179, 37, 37, 0.22);
@@ -60,15 +60,20 @@
     border-radius: 20px 0px 0px 20px;
 }
 
-.register .register-content{
+.register {
     background-color: #d96570;
     display: flex;
     flex-direction: column;
     padding: 40px;
     height: 400px;
+    width: 200px;
     border-radius: 0px 20px 20px 0px;
     box-shadow: 
     5px 14px 20px rgba(30, 96, 172, 0.399),
-    5px 10px 10px rgba(46, 104, 197, 0.444), 
-        
+    5px 10px 10px rgba(46, 104, 197, 0.444),     
+}
+
+.register-content{
+    display: flex;
+    flex-direction: column;
 }
