--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -77,3 +77,38 @@
     display: flex;
     flex-direction: column;
 }
+
+.register-text{
+    font-size: 25px;
+    text-align: center;
+    margin-top: 70px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
+.login-text{
+    font-size: 25px;
+    text-align: center;
+    margin-top: 70px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
+.login-header{
+    font-size: 30px;
+    color: black;
+    text-align: center;
+    margin-bottom: 30px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
+
+.register-header{
+    font-size: 30px;
+    color: black;
+    text-align: center;
+    margin-bottom: 30px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
