--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -168,7 +168,7 @@
     left: 235px;
     margin-top: 50px;
     cursor: pointer;
-    transition: "500ms ease-in"
+    transition: "500ms ease-in-out"
 }
             .signIn-login:hover{
                 background-color: #f37c88;
