--- a/src/styles/AppBar.scss
+++ b/src/styles/AppBar.scss
@@ -1,5 +1,5 @@
 .appBar{
-    background-color: var(--secondary-color-min);
+    background-color: var(--primary-color);
     height: 80px;
     margin-left: 35px;
     margin-right: 35px;
@@ -52,5 +52,5 @@
 .user{
     margin-top: -15px;
     margin-right: 20px;
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
 }
