--- a/src/styles/AppBar.scss
+++ b/src/styles/AppBar.scss
@@ -19,16 +19,25 @@
 .tag-1{
     margin-right: 80px;
     position: absolute;
+    padding-bottom: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .tag-2{
     margin-left: 150px;
-    position: absolute;
+    position: fixed;
+    padding-bottom: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .tag-3{
     position: absolute;
     margin-left: 300px;
+    padding-bottom: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .tag:hover{
@@ -42,6 +51,12 @@
     padding-bottom: 7px;
     padding-left: 10px;
     padding-right: 10px;
+    position: fixed;
+}
+
+.tag-not-active{
+    margin-top: 2px;
+    margin-left: +10px
 }
 
 .logo{
@@ -52,5 +67,5 @@
 .user{
     margin-top: -15px;
     margin-right: 20px;
-    background-color: var(--secondary-color);
+    background-color: transparent;
 }
