--- a/src/styles/AppBar.scss
+++ b/src/styles/AppBar.scss
@@ -73,4 +73,20 @@
     margin-top: -15px;
     margin-right: 20px;
     background-color: transparent;
-}
+}   
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    top: 90px;
+    right: 30px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
