--- a/src/styles/style_start.scss
+++ b/src/styles/style_start.scss
@@ -103,6 +103,7 @@
     cursor: pointer;
   }
 
+
   .content-1{
     position: absolute;
     left: 50%;
@@ -310,4 +311,19 @@
   .content-1 h1{
     display: none;
   }
+}
+.dropdown-content1 {
+  display: none;
+  position: absolute;
+  top: 90px;
+  right: 30px;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown1:hover .dropdown-content1 {
+  display: block;
 }
