--- a/src/styles/AppBar.scss
+++ b/src/styles/AppBar.scss
@@ -90,3 +90,86 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+.dropdown{
+    color: black;
+}
+
+
+.dropdown-content{
+    min-height: 400px;
+    min-width: 300px;
+    border-radius: 20px;
+    background-color: rgb(150, 163, 187);
+    z-index: 100;
+}
+
+.initials-dropdown{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    text-align: center;
+}
+
+.user-dropdown{
+    color: black;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: 80px;
+    height: 40px;
+    background-color: var(--secondary-color-min);
+    border-radius: 30px;
+    padding: 5px;
+}
+
+.signOut-dropdown{
+    top: 230px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    background-color: transparent;
+    border: 1px solid black;
+    padding: 5px 10px;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    cursor: pointer;
+    border-radius: 30px;
+}
+            .signOut-dropdown:hover{
+                background-color: rgba(255, 0, 0, 0.456);
+            }
+
+.settings-dropdown{
+    text-decoration: none;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: 150px;
+    border: 1px solid black;
+    border-radius: 15px;
+    padding: 5px 10px;
+    color: black;
+}
+            .settings-dropdown:hover{
+                background-color: rgba(255, 255, 255, 0.205);
+            }
+
+.impressum-dropdown{
+    position: absolute;
+    bottom: 10px;
+    display: flex;
+    font-size: 14px;
+    left: 50%;
+    transform: translate(-50%);
+    color: black;
+}
+
+.data-dropdown{
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.usage-dropdown{
+    cursor: pointer;
+}
