--- a/src/styles/AppBar.scss
+++ b/src/styles/AppBar.scss
@@ -5,11 +5,13 @@
     margin-right: 35px;
     margin-top: 20px;
     border-radius: 35px;
-    box-shadow: 0px 10px 13px rgba(173, 182, 230, 0.336);
+    box-shadow: 0px 2px 20px rgba(173, 182, 230, 0.336);
+    text-align: center;
 }
 
 .tags{
     left: 40%;
+    transform: translate(-50%);
     position: absolute;
     top: 40px;
     font-size: 30px;
@@ -26,7 +28,7 @@
 
 .tag-2{
     margin-left: 150px;
-    position: fixed;
+    position: absolute;
     padding-bottom: 7px;
     padding-left: 10px;
     padding-right: 10px;
