--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -80,6 +80,7 @@
     cursor: pointer;
     background-color: var(--accent-color-blue);
     font-size: 16px;
+    white-space: nowrap;
 }
             .join:active{
                 transform: scale(0.95);
