--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -73,6 +73,11 @@
                 color: var(--text-color);
             }
 
+            .inf-join input::placeholder{
+                color: var(--oppa-text-color);
+                opacity: 0.9;
+            }
+
 .join{
     padding: 15px 25px;
     border-radius:0px 100px 100px 0px;
