--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -146,14 +146,29 @@
 .awnser-container{
     width: 100%;
     position: absolute;
-    bottom: 100px;
+    bottom: 2vh;
     left: 50%;
     transform: translate(-50%);
+    padding-top: 40px;
+    padding-bottom: 40px;
+    border-radius: 30px 30px 0px 0px;
+}
+
+.awnser-container-parent{
+    background-color: #272626;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    border-radius: 40px 40px 0px 0px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    height: 27vh;
+    box-shadow: 0px -4px 20px grey;
 }
 
 .question-awnser{
     width: 48%;
-    height: 100px;
+    height: 10vh;
     border-radius: 20px;
     font-size: 20px;
     border: none;
@@ -162,9 +177,12 @@
     margin-right: 1%;
     margin-left: 1%;
     cursor: pointer;
+    color: white;
+    min-height: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
             .question-awnser:hover{
-                transform: scale(0.99);
+                transform: scale(0.985);
                 transition: 200ms ease;
                 background-color: white;
             }
@@ -175,23 +193,46 @@
             }
 
 .question-awnser:nth-child(1){
-    background-color: white;
+    background-color: #82a56c;
 }
 
 .question-awnser:nth-child(2){
-    background-color: white;
+    background-color: #528381;
 }
 .question-awnser:nth-child(3){
-    background-color: white;
+    background-color: #325456;
 }
 .question-awnser:nth-child(4){
-    background-color: white;
+    background-color: #28365e;
 }
 
 .question{
-    font-size: 25px;
+    font-size: calc(2.5vh + 1.5vw);
     left: 50%;
     transform: translate(-50%);
-    top: 150px;
+    top: 15vh;
     position: absolute;
+    background-color: var(--secondary-color-min);
+    text-align: center;
+    padding: 20px;
+    padding-right: 40px;
+    padding-left: 40px;
+    border-radius: 30px;
+    min-height: 30px;
+}
+
+.finish-quiz{
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%);
+    margin-top: 100px;
+}
+
+.text-finish{
+    font-size: 30px;
+    color: var(--text-color);
+}
+
+.loader{
+   margin-left: 50px;
 }
